tests/snapshot/inputs/errors/record_access.ncl
# capture = 'stderr'
# command = []
({ "%{(if false then "foo" else "bar")}" = false, bar = true }).foo